--- a/css/components/navigation.css
+++ b/css/components/navigation.css
@@ -215,7 +215,7 @@
 }
 
 /* MOBILE STYLES: 0-768px (phones) */
-@media (width < 768px) {
+@media (max-width: 767px) {
   .navbar {
     min-height: 3.5rem;
   }
@@ -287,7 +287,7 @@
 }
 
 /* TABLET STYLES: 768-992px (tablets) */
-@media (width >= 768px) and (width < 992px) {
+@media (min-width: 768px) and (max-width: 991px) {
   .navbar-brand .logo {
     display: block;
   }
