--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,9 +13,9 @@
     <div class="footer-col footer-support">
       <div class="footer-col-title">STAY CONNECTED</div>
       <div class="footer-support-text">Subscribe to our newsletter for updates on events, projects, and community news.</div>
-      <div id="mc_embed_signup" class="footer-newsletter">
+      <div id="mc_embed_signup_footer" class="footer-newsletter">
         <form action="https://civictechwr.us11.list-manage.com/subscribe/post?u=70e9ca4ba196596a75a7b6a3e&amp;id=e8b89282ec" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
-          <div id="mc_embed_signup_scroll">
+          <div id="mc_embed_signup_scroll_footer">
             <input type="email" name="EMAIL" class="email" id="mce-EMAIL" placeholder="your@email.com" required="" aria-label="Email Address">
             <div aria-hidden="true" style="position: absolute; left: -5000px;">
               <input type="text" name="b_70e9ca4ba196596a75a7b6a3e_e8b89282ec" tabindex="-1" value="">
